
[metadata]
name = ChemistryEquilibriumSimulator
author = ÍüÓÇ±±Ýæ²Ý
author-email = wybxc@qq.com
summary = awsome project created by pycman.
license = AGPL-3
description-file = 
    README.rst
home-page = http://example.com
requires-python = >= 3.6

[files]
packages = 
    escvv


[entry_points]
console_scripts =
    cmd=package.module:function
